export enum RoomCategory {
    Gabinete = 'Gabinete',
    Anfiteatro = 'Anfiteatro',
    Laboratório = 'Laboratório',
    Outro = 'Outro'
}
